# backend/src/main/java/com/janbabak/noqlbackend/controller/MessageController.java
@@ -17,11 +17,22 @@ public class MessageController {
 
     private final QueryService queryService;
 
+    /**
+     * Load data of specified message
+     *
+     * @param messageId message identifier
+     * @param page      page number (starting from 0)
+     * @param pageSize  number of rows on one page
+     * @return data of the message
+     * @throws EntityNotFoundException                                   when the message is not found
+     * @throws org.springframework.security.access.AccessDeniedException when user is not admin or owner of the message
+     */
     @GetMapping("/{messageId}/data")
-    public ChatResponseData loadChatResponseData(
-            @PathVariable UUID messageId,
-            @RequestParam(required = false) Integer page,
-            @RequestParam(required = false) Integer pageSize) throws EntityNotFoundException {
+    public ChatResponseData loadMessageData( // TODO: tests
+                                             @PathVariable UUID messageId,
+                                             @RequestParam(required = false) Integer page,
+                                             @RequestParam(required = false) Integer pageSize)
+            throws EntityNotFoundException {
         return queryService.loadChatResponseData(messageId, page, pageSize);
     }
 }
